# sentio

./: .beamignore  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  .yamllint.yaml  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  Dockerfile.ui  RAG_FIX_SUMMARY.md  README.md  docker-compose.yml  flow.md  langchain_migration.md  langgraph.json  langgraph_migration.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run.sh  setup.py  work.md
.github/workflows/: build-ghcr.yml  docker-build.yml  tests.yml
deploy/: README.md
deploy/kubernetes/: configmap.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  monitoring.yaml  namespace.yaml  networkpolicy.yaml  pdb.yaml  qdrant.yaml  rbac.yaml  redis.yaml  secrets.yaml  sentio-rag.yaml
docs/: langgraph.md
infra/: Dockerfile.api
infra/azure/: .env.azure.example  README.md  cleanup.sh  container-app-params.json  container-app.bicep  container-app.yaml  deploy-api.sh.example  deploy-infra.sh  deploy-qdrant.sh  deploy-worker.sh  main.bicep  main.json  setup-secrets.sh
infra/azure/bicep/: container-app.bicep  main.bicep
infra/azure/scripts/: build-multi-arch.sh  deploy-apps.sh  deploy-infra.sh  infra-control.sh  setup-secrets.sh
infra/azure/tests/: test_azure_integrations.py
plugins/: README.md  __init__.py  bge_reranker.py  cross_encoder.py  hyde_expander.py  interface.py  ollama_reranker.py  page_fetcher.py  query_rewriter.py  ragas_eval.py  transformers_reranker.py  web_page_fetcher.py  web_search.py
prompts/: fallback_default.md  fallback_error.md  fallback_search.md  profile.md  retrieve.md  summarize.md  verify.md
root/: .dockerignore  .env.azure.example  .env.example  DOCUMENTATION.md  Dockerfile.api  Dockerfile.worker  __init__.py  app.py  baseline_coverage.txt  requirements.txt  streamlit_app.py  worker.py
root/cli/: __init__.py  sentio_cli.py
root/cli/scripts/: __init__.py  build_index.py
root/devops/: .env.azure.example  Dockerfile-azure.api  Dockerfile.api  Dockerfile.ui  Dockerfile.worker  base.Dockerfile  nginx.conf  prepare_for_azure.sh  setup-env.sh  startup.sh  wait-for-it.sh
root/prompts/: fix_repy.md  profile.md  ragas.md  retrieve.md  summarize.md
root/src/: __init__.py  azure_integration.py  main.py
root/src/api/: __init__.py  main.py  openrouter_proxy.py  routes.py
root/src/azure/: __init__.py  cosmos.py  queue.py
root/src/core/: __init__.py  chunking.py  embeddings.py  llm_reply_extractor.py  pipeline.py  plugin_manager.py
root/src/core/embeddings/: __init__.py  embeddings_adapter.py
root/src/core/graph/: __init__.py  graph_factory.py  hyde_node.py  ragas_node.py  streaming.py
root/src/core/llm/: chat_adapter.py  llm_reply_extractor.py  prompt_builder.py
root/src/core/plugins/: __init__.py  hyde.py  hyde_expander.py
root/src/core/rerankers/: __init__.py  cross_encoder.py  rerank_adapter.py
root/src/core/retrievers/: __init__.py  hybrid.py  sparse.py  web_search.py
root/src/core/tasks/: __init__.py  chunking.py  ingest.py  (+2 more)
root/src/scripts/: __init__.py  ingest.py
root/src/ui/: dynamic.css  splash.html  splash.js
root/src/utils/: docker_wrapper.py  feature_flags.py  settings.py
root/tests/: README.md  conftest.py  locustfile.py  test_additional_coverage.py  test_api.py  test_api_endpoints.py  test_azure_integration.py  test_chunker.py  test_chunking_strategies.py  test_embedding_cache.py  test_embeddings.py  test_embeddings_retry.py  test_graph_basic.py  test_graph_pipeline.py  test_graph_smoke.py  test_hybrid_sparse.py  test_import_paths.py  test_langgraph_simple.py  test_pipeline_deep.py  test_pipeline_deep2.py  test_pipeline_extended.py  test_pipeline_flow.py  test_pipeline_helpers.py  test_pipeline_init.py  test_pipeline_query.py  test_pipeline_utils.py  test_plugin_manager.py  test_qdrant_store.py  test_rag_pipeline.py  test_ragas_node.py  test_rerankers.py  test_simple_import.py  test_streaming.py  test_text_chunker_split.py
root/tests/e2e/: test_chat.py
root/worker/: __init__.py  __main__.py
scripts/: langgraph_server.py
src/api/: app.py
src/api/handlers/: __init__.py  chat.py  health.py
src/cli/: __init__.py  api.py  ingest.py  main.py  run.py  studio.py  ui.py
src/core/: dependencies.py
src/core/caching/: __init__.py  cache_manager.py  memory_cache.py  redis_cache.py  strategies.py
src/core/chunking/: __init__.py  text_splitter.py
src/core/embeddings/: __init__.py  base.py  factory.py
src/core/graph/: __init__.py  factory.py  nodes.py  state.py
src/core/ingest/: __init__.py  ingest.py
src/core/llm/: __init__.py  answer_verifier.py  chat_adapter.py  factory.py  generator.py  prompt_builder.py  reply_extractor.py
src/core/models/: document.py
src/core/rerankers/: __init__.py  base.py  jina_reranker.py
src/core/resilience/: __init__.py  decorators.py  fallbacks.py  patterns.py
src/core/retrievers/: __init__.py  base.py  dense.py  factory.py  hybrid.py  scorers.py  sparse.py
src/core/vector_store/: __init__.py  async_qdrant_store.py  qdrant_store.py
src/observability/: __init__.py  metrics.py  monitoring.py  tracing.py
src/tests/api/: conftest.py  test_endpoints.py
src/tests/caching/: test_cache_manager.py  test_cache_manager_old.py
src/tests/chunking/: __init__.py  test_chunking_sample.py  test_text_splitter.py
src/tests/embeddings/: test_jina_embeddings.py  test_jina_embeddings_old.py
src/tests/graph/: __init__.py  test_basic_graph.py
src/tests/handlers/: test_chat_handler.py  test_health_handler.py
src/tests/ingest/: __init__.py  test_document_ingestor_comprehensive.py  test_document_ingestor_comprehensive_old.py  test_ingestor.py
src/tests/llm/: test_openai_provider.py
src/tests/rerankers/: __init__.py  test_jina_reranker.py
src/tests/retrievers/: __init__.py  test_hybrid_retriever.py
src/tests/utils/: test_exceptions.py
src/tests/vector_store/: test_qdrant_store.py  test_qdrant_store_old.py
src/ui/: health_check.py  streamlit_app.py
src/utils/: auth.py  check_deps.py  exceptions.py  security.py  settings.py
tests/: smoke.sh
(+26 files in other folders)
